# baxter_dream_portfolio

./: CMakeLists.txt  README.md  package.xml  setup.py
data/: baxter_kinect.world  gazebo_model_paths.yaml  grasp_task.yaml  mini_shelf_task.yaml  move_task.yaml  moveit_model_paths.yaml  portfolio.yaml  scene.yaml  shelfWorld.yaml  shelf_task.yaml  task.yaml  test.yaml
data/models/gazebo/: box.sdf  box_table.sdf
data/models/gazebo/cafe_table/meshes/: cafe_table.stl
data/models/gazebo/coke_can/meshes/: coke_can.stl
data/models/gazebo/crayola_64_ct/: model.config  model.sdf
data/models/gazebo/crayola_64_ct/meshes/: crayola_64_ct.dae
data/models/gazebo/kiva_pod_medres/: model.config  model.sdf
data/models/gazebo/kiva_pod_medres/meshes/: pod_medres.stl
data/models/gazebo/order_bin/: model.config  model.sdf
data/models/poinclouds/: bowl.pcd  cheezit_big_original.pcd  coke_can.pcd  cordless_drill.pcd  crayola_64_ct.pcd  hammer.pcd  pod_lowres.pcd
include/grasp_planner/: AgileGraspHandles.hpp  AgileGraspPlanner_cpp.hpp  GraspPlanner.hpp
launch/: gazebo_baxter.launch  joint_action_server.launch  manipulation_optimization.launch  moveit_baxter.launch
results/: mini_shelf_28042016.yaml
scripts/: BaxterRobotSimulator.py
src/: AgileGraspHandles.cpp  AgileGraspPlanner_cpp.cpp  GraspPlanner_wrapper.cpp
src/baxter_manip_portfolio/: AgileGraspPlanner.py  HafGraspPlanner.py  MoveItUtils.py  MoveItWrapper.py  SimpleGraspController.py  tags
src/baxter_simulation/: BaxterSimulator.py
src/grasp_planner/: AgileGraspHandles.cpp  GraspPlanner.cpp  askPointCloudServer.cpp
src/grasp_planner/python/: _GraspPlanner_wrapper_py.py
src/manipulation_optimizer/: __init__.py
srv/: AskPointCloud.srv
